chat: fix msg content/timestamp overlapping issue

--- a/WhatsApp.user.css
+++ b/WhatsApp.user.css
@@ -994,6 +994,12 @@
     #main ._1hhkM {
       background-color: var(--darker); }
 
+  /*
+    Fixes message content/timestamp overlapping.
+    Apparently they forgot to add nl-specific styles. XD
+  */
+  html[lang=nl] .EopGb { width: 56px }
+  html[lang=nl] ._2COY9 { width: 92px }
 
   /* Bubble tails -- experimental. */
   .tail .tail-container {
